[package]
name = "templog"
version = "0.1.0"
authors = ["Lennart <lennart@ltheinrich.de>"]
edition = "2018"
license = "ISC"
repository = "https://ltheinrich.de/templog"
description = "CPU temperature logger"

[dependencies]
kern = "1.3.0"
plotlib = "0.5.1"

[profile.release]
lto = "fat"
codegen-units = 1
