[package]
name = "templog"
version = "0.1.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2018"
license = "ISC"
repository = "https://ltheinrich.de/templog"
description = "CPU temperature logger and plotter"

[dependencies]
kern = "1.7.1"
plotlib = "0.5.1"

[profile.release]
lto = "fat"
codegen-units = 1
