[package]
name = "templog"
version = "0.1.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"
license = "ISC"
repository = "https://ltheinrich.de/templog"
description = "CPU temperature logger and plotter"

[dependencies]
kern = "1.8.3"
plotlib = { git = "https://github.com/milliams/plotlib", branch = "dependabot/cargo/svg-0.13.0" }

[profile.release]
lto = "fat"
codegen-units = 1
